# kelly-criterion-service

./: Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
kelly_criterion_service/: __init__.py  config.py  kelly_criterion_service.py  kelly_criterion_view.py
