[metadata]
name = kelly_criterion_service
summary = Kelly Criterion Calculator Service
description-file =
    README.md
author = Tibor Kiss
author-email = tibor.kiss@gmail.com
home-page = https://github.com/kelly-direct/kelly-criterion-service
classifiers =
    Development Status :: 6 - Mature
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Investment
keywords = kelly-criterion kelly money-management

[entry_points]
console_scripts =
    kelly_criterion_service = kelly_criterion_service.kelly_criterion_service:main


[files]
packages = kelly_criterion_service
package_data = kelly_criterion_service =
    ../LICENSE

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[tool:pytest]
collect_ignore = ['setup.py']